# qwen-openai-agents

./: .gitignore  .pre-commit-config.yaml  Makefile  QWEN.md  README.md  investment_analysis_methodology.md  main.py  pyproject.toml
cli/: __init__.py  analyze_stocks.py  bse_news.py  invoke_lambda.py  refresh_token.py
client/: qwen.py
deployment/: README.md
deployment/lambda/: invoke_batch_handler.py  lambda_handler.py  refresh_creds_handler.py  scheduled_invoke_handler.py
deployment/scripts/: build.py  create_tf_backend.py  deploy.py  upload_creds.py
deployment/terraform/: main.tf  outputs.tf  providers.tf  sqs.tf  variables.tf
services/: bse_analysis_service.py
stocks/: stocks_100
tools/: __init__.py  web_fetch.py
