[project]
name = "qwen-openai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.21",
    "click>=8.1.7",
    "html2text>=2025.4.15",
    "openai>=1.102.0",
    "requests>=2.32.5",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["openai.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.11",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-requests>=2.32.4.20250809",
]
